Changes to object model coupling to database.

--- a/XOSkinWebApp/Areas/Administration/Views/Languages/Create.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/Languages/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model XOSkinWebApp.ORM.Language
+﻿@model XOSkinWebApp.Areas.Administration.Models.LanguageViewModel
 
 @{
     ViewData["Title"] = "Create";
