--- a/XOSkinWebApp/Areas/Administration/Views/Languages/Index.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/Languages/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<XOSkinWebApp.ORM.Language>
+﻿@model IEnumerable<XOSkinWebApp.Areas.Administration.Models.LanguageViewModel>
 
 @{
   ViewData["Title"] = "Languages";
