--- a/XOSkinWebApp/Areas/Administration/Views/LocalizedImages/Create.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/LocalizedImages/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model XOSkinWebApp.ORM.LocalizedImage
+﻿@model XOSkinWebApp.Areas.Administration.Models.LocalizedImageViewModel
 
 @{
     ViewData["Title"] = "Create";
