--- a/XOSkinWebApp/Areas/Administration/Views/LocalizedImages/Index.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/LocalizedImages/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<XOSkinWebApp.ORM.LocalizedImage>
+﻿@model IEnumerable<XOSkinWebApp.Areas.Administration.Models.LocalizedImageViewModel>
 
 @{
   ViewData["Title"] = "Image Localizations";
