--- a/XOSkinWebApp/Areas/Administration/Views/LocalizedTexts/Delete.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/LocalizedTexts/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model XOSkinWebApp.ORM.LocalizedText
+﻿@model XOSkinWebApp.Areas.Administration.Models.LocalizedTextViewModel
 
 @{
   ViewData["Title"] = "Delete";
