--- a/XOSkinWebApp/Areas/Administration/Views/Questionnaires/Create.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/Questionnaires/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model XOSkinWebApp.ORM.Questionnaire
+﻿@model XOSkinWebApp.Areas.Administration.Models.QuestionnaireViewModel
 
 @{
     ViewData["Title"] = "Create";
