--- a/XOSkinWebApp/Areas/Administration/Views/Questionnaires/Index.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/Questionnaires/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<XOSkinWebApp.ORM.Questionnaire>
+﻿@model IEnumerable<XOSkinWebApp.Areas.Administration.Models.QuestionnaireViewModel>
 
 @{
     ViewData["Title"] = "Index";
