--- a/XOSkinWebApp/Areas/Administration/Views/Questions/Edit.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/Questions/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model XOSkinWebApp.ORM.Question
+﻿@model XOSkinWebApp.Areas.Administration.Models.QuestionViewModel
 
 @{
     ViewData["Title"] = "Edit";
