--- a/XOSkinWebApp/Areas/Administration/Views/Questions/Index.cshtml
+++ b/XOSkinWebApp/Areas/Administration/Views/Questions/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<XOSkinWebApp.ORM.Question>
+﻿@model IEnumerable<XOSkinWebApp.Areas.Administration.Models.QuestionViewModel>
 
 @{
     ViewData["Title"] = "Index";
