--- a/XOSkinWebApp/Views/TopSellers/Index.cshtml
+++ b/XOSkinWebApp/Views/TopSellers/Index.cshtml
@@ -70,12 +70,8 @@
   }
 </table>
 
-@*<script type="text/javascript">
+<script type="text/javascript">
   $(document).ready(function () {
-    var table = $('#TopProduct').DataTable();
-
-    new $.fn.dataTable.Responsive(table, {
-      details: true
-    });
+    
   });
-</script>*@
+</script>
