Splash page adjustment.

--- a/XOSkinWebApp/Views/Shared/_Layout.cshtml
+++ b/XOSkinWebApp/Views/Shared/_Layout.cshtml
@@ -21,7 +21,7 @@
 <body>
   <div id="splash" style="width: 100%; height: 100%; text-align: center; margin-top: 0; opacity: 100%">
     <div id="splash-content">
-      <img src="~/img/splashLogo.png" style="width: 150px" />
+      <img src="~/img/splashLogo.png" />
     </div>
   </div>
   <div id="content" style="opacity: 0%">
