--- a/XOSkinWebApp/Views/YourLipsAndSmile/Index.cshtml
+++ b/XOSkinWebApp/Views/YourLipsAndSmile/Index.cshtml
@@ -9,13 +9,63 @@
   @Html.Raw(ViewData["YourLipsAndSmile.WelcomeText"])
 </div>
 
+<script type="text/javascript">
+  function imageZoom(imgID, resultID) {
+    var img, lens, result, cx, cy;
+    img = document.getElementById(imgID);
+    result = document.getElementById(resultID);
+    lens = document.createElement("DIV");
+    lens.setAttribute("class", "img-zoom-lens");
+    img.parentElement.insertBefore(lens, img);
+    cx = result.offsetWidth / lens.offsetWidth;
+    cy = result.offsetHeight / lens.offsetHeight;
+    result.style.backgroundImage = "url('" + img.src + "')";
+    result.style.backgroundSize = (img.width * cx) + "px " + (img.height * cy) + "px";
+    lens.addEventListener("mousemove", moveLens);
+    img.addEventListener("mousemove", moveLens);
+    lens.addEventListener("touchmove", moveLens);
+    img.addEventListener("touchmove", moveLens);
+    function moveLens(e) {
+      var pos, x, y;
+      e.preventDefault();
+      pos = getCursorPos(e);
+      x = pos.x - (lens.offsetWidth / 2);
+      y = pos.y - (lens.offsetHeight / 2);
+      if (x > img.width - lens.offsetWidth) { x = img.width - lens.offsetWidth; }
+      if (x < 0) { x = 0; }
+      if (y > img.height - lens.offsetHeight) { y = img.height - lens.offsetHeight; }
+      if (y < 0) { y = 0; }
+      lens.style.left = x + "px";
+      lens.style.top = y + "px";
+      result.style.backgroundPosition = "-" + (x * cx) + "px -" + (y * cy) + "px";
+    }
+    function getCursorPos(e) {
+      var a, x = 0, y = 0;
+      e = e || window.event;
+      a = img.getBoundingClientRect();
+      x = e.pageX - a.left;
+      y = e.pageY - a.top;
+      x = x - window.pageXOffset;
+      y = y - window.pageYOffset;
+      return { x: x, y: y };
+    }
+  }
+</script>
+
 <table class="table text-center" style="width: 390px; margin-left: auto; margin-right: auto">
   @foreach (var item in Model)
   {
     <tr>
       <td>
         <p>
-          <img src="@item.ImageSource" height="300" /><br />
+          <div class="flex-container" style="vertical-align: middle">
+            <div class="img-zoom-container flex-child" style="width: 50%; margin-left: auto; margin-right: auto; ">
+              <img id="i_@item.ImageSource" src="@item.ImageSource" style="width: 180px; height: 180px">
+            </div>
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <div id="d_@item.ImageSource" class="img-zoom-result flex-child" style="width: 50%; margin-left: auto; margin-right: auto"></div>
+          </div>
+          <br />
           <b>@Html.DisplayFor(modelItem => item.Name)</b> <br />
           <span style="text-align: justify">
             @Html.DisplayFor(modelItem => item.Description)
@@ -29,3 +79,9 @@
     </tr>
   }
 </table>
+<script>
+  @foreach (var item in Model)
+  {
+    @Html.Raw("imageZoom('i_" + @item.ImageSource + "', 'd_" + item.ImageSource + "');");
+  }
+</script>
