--- a/XOSkinWebApp/wwwroot/css/site.css
+++ b/XOSkinWebApp/wwwroot/css/site.css
@@ -196,3 +196,39 @@ div.alert.alert-success.alert-dismissible {
 /* DataTables 
   Changed datatables.min.css td.dtr-control background-color to #000.
 */
+
+/* Image Zoom */
+
+* {
+  box-sizing: border-box;
+}
+
+.img-zoom-container {
+  position: relative;
+}
+
+.img-zoom-lens {
+  position: absolute;
+  border: 1px solid #000;
+  /*set the size of the lens:*/
+  width: 40px;
+  height: 40px;
+}
+
+.img-zoom-result {
+  border: 1px solid #d4d4d4;
+  /*set the size of the result div:*/
+  width: 180px;
+  height: 180px;
+}
+
+.flex-container {
+  display: flex;
+}
+
+.flex-child {
+  flex: 1;
+}
+
+.flex-child:first-child {
+}
