--- a/XOSkinWebApp/Views/ShoppingCart/Index.cshtml
+++ b/XOSkinWebApp/Views/ShoppingCart/Index.cshtml
@@ -11,25 +11,25 @@
 </div>
 @if (Model.Count == 0)
 {
-<br />
-<div class="text-center">
-  @Html.Raw("Your shopping cart is currently empty. Go <a href=/TopSellers/>add some items</a>.")
-</div>
+  <br />
+  <div class="text-center">
+    @Html.Raw("Your shopping cart is currently empty. Go <a href=/TopSellers/>add some items</a>.")
+  </div>
 }
 else
 {
-<table class="table table-responsive" id="ShoppingCart">
-  <thead>
-    <tr>
-      <th></th>
-      <th class="text-nowrap">Product Name</th>
-      <th>Description</th>
-      <th>Quantity</th>
-      <th></th>
-      <th class="text-nowrap">Sub-Total</th>
-    </tr>
-  </thead>
-  <tbody>
+  <table class="table table-responsive" id="ShoppingCart">
+    <thead>
+      <tr>
+        <th></th>
+        <th class="text-nowrap">Product Name</th>
+        <th>Description</th>
+        <th>Quantity</th>
+        <th></th>
+        <th class="text-nowrap">Sub-Total</th>
+      </tr>
+    </thead>
+    <tbody>
     @foreach (ShoppingCartLineItemViewModel lineItem in Model)
     {
       <tr>
@@ -42,7 +42,7 @@ else
               <input type="hidden" name="LineItemId" value="@lineItem.Id" />
               <input type="hidden" name="ProductId" value="@lineItem.ProductId" />
               <input name="Quantity" class="form-control" size="2" maxlength="2" type="text" value="@lineItem.Quantity"
-                onkeypress="return restrictAlphabets(event)" />
+                      onkeypress="return restrictAlphabets(event)" />
             </div>
             <div style="display: inline; float: left">&nbsp;</div>
             <div style="display: inline; float: left">
@@ -60,33 +60,33 @@ else
       </tr>
       total += lineItem.Total;
     }
-  </tbody>
-</table>
-<div style="font-weight: bold; text-align: right; margin-right: 40px">Total: $@Html.Raw(total.ToString())</div>
-<br />
-<div style="text-align: right; margin-right: 40px">
-  <button type="submit" class="btn-outline-dark btn">Checkout</button>
-</div>
-<script type="text/javascript">
-  $(document).ready(function () {
-    var table = $('#ShoppingCart').DataTable({
-      paging: false,
-      searching: false,
-      sort: false,
-      bInfo: false
+    </tbody>
+  </table>
+  <div style="font-weight: bold; text-align: right; margin-right: 40px">Total: $@Html.Raw(total.ToString())</div>
+  <br />
+  <div style="text-align: right; margin-right: 40px">
+    <a class="btn-outline-dark btn" asp-area="" asp-controller="Checkout" asp-action="Index">Proceed to Checkout</a>
+  </div>
+  <script type="text/javascript">
+    $(document).ready(function () {
+      var table = $('#ShoppingCart').DataTable({
+        paging: false,
+        searching: false,
+        sort: false,
+        bInfo: false
+      });
+
+      new $.fn.dataTable.Responsive(table, {
+        details: true
+      });
     });
 
-    new $.fn.dataTable.Responsive(table, {
-      details: true
-    });
-  });
-
-  function restrictAlphabets(e) {
-    var x = e.which || e.keycode;
-    if ((x >= 48 && x <= 57))
-      return true;
-    else
-      return false;
-  }
-</script>
+    function restrictAlphabets(e) {
+      var x = e.which || e.keycode;
+      if ((x >= 48 && x <= 57))
+        return true;
+      else
+        return false;
+    }
+  </script>
 }
